# prompt-ablation-study

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/math_reasoning/: batch_results_msgbatch_01E6jGpnPoHMQzQ72RDCRJui.jsonl  examples.jsonl  formatted_prompts_20250317_131042.jsonl  problems.jsonl
notebooks/: analysis.ipynb  mock_analysis.ipynb
src/: __init__.py  logging.py
src/analysis/: factorial_anova.py
src/apis/: llm_interface.py  mock_client.py
src/domains/math_reasoning/: components.py  config.py  evaluation.py  loader.py  mock_results.py  response_normalization.py  run_experiment.py  sample_data.py
src/experiments/: runner.py
src/models/: __init__.py  domain_models.py  prompt_models.py
src/prompts/: create_templates.py
