[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-component-study"
version = "0.1.0"
description = "Prompt component ablation study toolkit"
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.ruff.format]
quote-style = "single"